# Go2_planner_suite

./: .gitignore  README.md  commands  frames_2025-10-24_01.33.15.gv
scripts/: build.sh  launch.sh  setup.sh  sim.sh
workspaces/autonomous_exploration/src/local_planner/src/: pathFollower.cpp
workspaces/autonomous_exploration/src/vehicle_simulator/launch/: system_real_robot.launch
workspaces/dlio/src/: CMakeLists.txt
workspaces/dlio/src/include/nano_gicp/cuda/: cuda_transform.cuh
workspaces/dlio/src/launch/: dlio.launch.py
workspaces/dlio/src/src/nano_gicp/cuda/: cuda_covariance.cu  cuda_gicp.cu  cuda_knn.cu  cuda_transform.cu
workspaces/far_planner/: PREMATURE_STOPPING_FIX.md  STUCK_FIX_IMPROVEMENTS.md  WAYPOINT_TO_CMDVEL_README.md  test_cuda12  test_cuda12.cu  test_cuda13  test_cuda13.cpp
workspaces/far_planner/src/boundary_handler/: CMakeLists.txt  check_gpu_setup.sh
workspaces/far_planner/src/boundary_handler/config/: default.yaml
workspaces/far_planner/src/boundary_handler/include/boundary_handler/: graph_cuda_types.h  graph_cuda_wrapper.h  graph_extractor.h
workspaces/far_planner/src/boundary_handler/src/: graph_cuda_kernels.cu  graph_cuda_wrapper.cpp  graph_extractor.cpp
workspaces/far_planner/src/far_planner/: CMakeLists.txt
workspaces/far_planner/src/far_planner/config/: default.yaml  matterport.yaml
workspaces/far_planner/src/far_planner/include/far_planner/: cuda_types.h  dynamic_graph.h  far_planner_cuda_wrapper.h  node_struct.h
workspaces/far_planner/src/far_planner/launch/: far_planner.launch  far_planner_cmd_vel_pub.launch
workspaces/far_planner/src/far_planner/rviz/: default.rviz
workspaces/far_planner/src/far_planner/src/: dynamic_graph.cpp  far_planner.cpp  far_planner_cuda_wrapper.cpp  graph_cuda_collision.cu  waypoint_to_cmd_vel.cpp
workspaces/open3d_slam/src/open3d_slam/open3d_slam/open3d_slam/include/open3d_slam/: frames.hpp
workspaces/open3d_slam/src/open3d_slam/open3d_slam/open3d_slam_io/open3d_slam_lua_io/example_param/default/: parameter_structure_definitions.lua
workspaces/open3d_slam/src/open3d_slam/ros/open3d_slam_ros/launch/: mapping.launch.py  mapping_rosbag.launch.py
workspaces/open3d_slam/src/open3d_slam/ros/open3d_slam_ros/param/: param_custom.lua
workspaces/open3d_slam/src/open3d_slam/ros/open3d_slam_ros/param/default/: parameter_structure_definitions.lua
workspaces/open3d_slam/src/open3d_slam/ros/open3d_slam_ros/rviz/: default.rviz
workspaces/open3d_slam_ws/src/ros/open3d_slam_ros/data/: map.pcd  submap_0.ply  submap_1.ply  submap_10.ply  submap_11.ply  submap_12.ply  submap_13.ply  submap_2.ply  submap_3.ply  submap_4.ply  submap_5.ply  submap_6.ply  submap_7.ply  submap_8.ply  submap_9.ply  submap_center_0.ply  submap_center_1.ply  submap_center_10.ply  submap_center_11.ply  submap_center_12.ply  submap_center_13.ply  submap_center_2.ply  submap_center_3.ply  submap_center_4.ply  submap_center_5.ply  submap_center_6.ply  submap_center_7.ply  submap_center_8.ply  submap_center_9.ply
workspaces/open3d_slam_ws/src/ros/open3d_slam_ros/launch/: open3d_launch.py
workspaces/open3d_slam_ws/src/ros/open3d_slam_ros/param/: param_summer_school.lua
workspaces/open3d_slam_ws/src/ros/open3d_slam_ros/rviz/: ros2.rviz
workspaces/pipeline_launcher/src/pipeline_launcher/: CMakeLists.txt  README.md  package.xml
workspaces/pipeline_launcher/src/pipeline_launcher/launch/: __init__.py  config.py  launch_utils.py  pipeline.launch.py  pipeline_dev.launch.py  pipeline_gazebo.launch.py  pipeline_mapping.launch.py  pipeline_real.launch.py  pipeline_simulation.launch.py
